[package]
name = "rush"
version = "0.1.0"
authors = ["Max Rottenkolber <max@mr.gy>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
once_cell = "1.3.1"
libc = "0.2"
ixy = { git = "https://github.com/ixy-languages/ixy.rs", rev = "9ffd5d5ea7d66bbd535530057401fa6686888e54" }

